[package]
name = "advent-of-code-2023"
version = "0.1.0"
authors = ["Fabian Bertha <famoto2@gmail.com>"]
edition = "2021"

[lib]
bench = true

[dependencies]
rust-crypto = "0.2.36"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
indoc = "2.0.4"
itertools = "0.12.0"
rayon = "1.8.0"
tinyvec = "1.6.0"
strum = { version = "0.25", features = ["derive"] }
arrayvec = "0.7.4"
